--- a/src/Collections/Collections.css
+++ b/src/Collections/Collections.css
@@ -162,6 +162,46 @@
     justify-content: center;
     padding: 10% 0 5% 0;
 }
+.switch-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.switch-button {
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    background: #ddd;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.switch-button.active {
+    background: #333;
+    color: white;
+}
+
+.engagement-rings,
+.regular-rings {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.engagement-rings-container,
+.regular-rings {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    gap: 30px;
+}
+.engagement-rings>h2{
+    padding: 5%;
+}
+
 .earrings,
 .chain,
 .bracelet,
@@ -250,7 +290,7 @@
 
 .popup-content {
     background: white;
-    padding: 20px;
+    padding: 25px;
     max-width: 100%;
     border-radius: 10px;
     position: relative;
@@ -324,7 +364,7 @@
         font-size: 1.2rem;
     }
     .scroll-down {
-        margin-top: 10px;
+        margin-top: -22px;
         font-size: 1.2rem;
     }
 
